--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "init-db": "node scripts/initDatabase.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .js",
+    "clean-db": "node -e \"require('./config/neo4j').executeQuery('MATCH (n) DETACH DELETE n').then(() => console.log('Base nettoyée')).catch(console.error)\"",
+    "backup-db": "node -e \"console.log('Backup non implémenté - utilisez Neo4j dump')\""
   },
   "dependencies": {
     "express": "^4.18.2",
