--- a/.env-prod
+++ b/.env-prod
@@ -2,9 +2,9 @@
 
 // my bd server is now online, it is coorect the following Configuration
 
-NEO4J_URI=bolt://31.97.152.80:7687
-NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=fgneo4jfg226
+NEO4J_URI=bolt://something:7687
+NEO4J_USERNAME=
+NEO4J_PASSWORD=
 
 # Configuration serveur
 PORT=3001
@@ -15,4 +15,5 @@ CORS_ORIGIN=http://localhost:3000
 
 # Configuration rate limiting
 RATE_LIMIT_WINDOW_MS=900000
+
 RATE_LIMIT_MAX_REQUESTS=100
